--- a/style.css
+++ b/style.css
@@ -363,12 +363,11 @@ body {
   justify-content: end;
   position: absolute;
 }
-.services .now .good img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  margin-left: 20px;
-  width: 13.6%;
-  height: 6.5vh;
+.services .now .good i {
+  font-size: 24px;
+  background-color: #742296;
+  padding: 7px 12px;
+  color: white;
 }
 .services .now .good h5 {
   font-size: 27px;
@@ -388,20 +387,32 @@ body {
   position: relative;
 }
 .services .super .more {
-  width: 298px;
-  height: 75vh;
+  width: 297.7px;
+  height: 71.9vh;
   display: flex;
   align-items: end;
   justify-content: end;
   position: absolute;
 }
 .services .super .more img {
+  position: relative;
   -o-object-fit: contain;
-     object-fit: contain;
-  width: 12.9%;
-  height: 13.9vh;
-  opacity: 70%;
-  margin-right: 9.2px;
+  object-fit: contain;
+  width: 16.9%;
+  height: 6.9vh;
+  opacity: 100%;
+  margin-right: 3.2px;
+}
+.services .super .more i {
+  position: absolute;
+  font-size: 17px;
+  background-color: #742296;
+  border-radius: 50%;
+  padding: 5px 7px;
+  color: white;
+  z-index: 1;
+  margin-right: 14px;
+  margin-bottom: 10px;
 }
 .services .super h3 {
   font-size: 18px;
@@ -448,12 +459,11 @@ body {
   justify-content: end;
   position: absolute;
 }
-.services .bad img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  margin-left: 20px;
-  width: 13.6%;
-  height: 6.5vh;
+.services .bad i {
+  font-size: 24px;
+  background-color: #742296;
+  padding: 7px 12px;
+  color: white;
 }
 .services .bad h5 {
   font-size: 27px;
@@ -495,12 +505,11 @@ body {
   width: 392px;
   height: 55vh;
 }
-.main .get .kim2 .late {
-  -o-object-fit: contain;
-     object-fit: contain;
-  width: 9.3%;
-  height: 6vh;
-  margin-left: 20PX;
+.main .get .kim2 i {
+  font-size: 24px;
+  background-color: #742296;
+  padding: 7px 12px;
+  color: white;
 }
 .main .get .kim1 {
   display: flex;
@@ -514,12 +523,11 @@ body {
   width: 392px;
   height: 55vh;
 }
-.main .get .kim1 .visa {
-  -o-object-fit: contain;
-     object-fit: contain;
-  width: 9.3%;
-  height: 6vh;
-  margin-left: 20PX;
+.main .get .kim1 i {
+  font-size: 24px;
+  background-color: #742296;
+  padding: 7px 12px;
+  color: white;
 }
 .main .get p:first-of-type {
   font-family: "JosefinSans-Regular";
@@ -557,8 +565,8 @@ body {
   padding: 30px;
 }
 .instagram .demo img {
-  width: 12%;
-  height: 47vh;
+  width: 10%;
+  height: 43vh;
   padding: 5px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -838,10 +846,21 @@ body {
   .services .super .more img {
     -o-object-fit: contain;
        object-fit: contain;
-    width: 22%;
-    height: 2.34vh;
-    opacity: 70%;
-    margin-right: 0px;
+    width: 61px;
+    height: 3vh;
+    opacity: 100%;
+    margin-right: 4px;
+  }
+  .services .super .more i {
+    position: absolute;
+    font-size: 17px;
+    background-color: #742296;
+    border-radius: 50%;
+    padding: 5px 7px;
+    color: white;
+    z-index: 1;
+    margin-right: 20px;
+    margin-bottom: 6px;
   }
   .services .super h3 {
     font-size: 16px;
@@ -965,6 +984,34 @@ body {
     overflow: clip;
     height: 19.6vh;
     width: 353.2px;
+  }
+  .isdo .line5 {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+  }
+  .isdo .line4 {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+  }
+  .isdo .line3 {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+  }
+  .isdo .line {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+  }
+  .isdo img {
+    width: 50%;
+    padding-bottom: 21px;
   }
 }
 @media (min-width: 578px) and (max-width: 768px) {
@@ -1132,7 +1179,7 @@ body {
     position: relative;
   }
   .services .now .good {
-    height: 36vh;
+    height: 34vh;
     width: 100%;
   }
   .services .now .good img {
@@ -1144,8 +1191,8 @@ body {
   }
   .services .now .good h5 {
     font-size: 18px;
-    padding-right: 17px;
-    margin-bottom: 24px;
+    padding-right: 26px;
+    margin-bottom: 7px;
   }
   .services .super {
     margin: 0 20px;
@@ -1161,16 +1208,28 @@ body {
   .services .super .more img {
     -o-object-fit: contain;
        object-fit: contain;
-    width: 13%;
-    height: 4.4vh;
-    opacity: 70%;
-    margin-right: 3.2px;
+    width: 18%;
+    height: 5.1vh;
+    opacity: 100%;
+    margin-right: 1px;
+  }
+  .services .super .more i {
+    position: absolute;
+    font-size: 17px;
+    background-color: #742296;
+    border-radius: 50%;
+    padding: 5px 7px;
+    color: white;
+    z-index: 1;
+    margin-right: 6px;
+    margin-bottom: 12px;
   }
   .services .super h3 {
     font-size: 12px;
+    padding: 0;
   }
   .services .super li {
-    font-size: 11px;
+    font-size: 10px;
     padding: 0px;
   }
   .services .super li .line {
@@ -1188,7 +1247,7 @@ body {
     position: relative;
   }
   .services .bad {
-    height: 36vh;
+    height: 34vh;
     width: 100%;
   }
   .services .bad img {
@@ -1201,11 +1260,23 @@ body {
   .services .bad h5 {
     font-size: 18px;
     padding-right: 55px;
-    margin-bottom: 33px;
+    margin-bottom: 15px;
   }
   .main .get .kim1 {
     width: 278px;
     height: 22vh;
+  }
+  .main .get .kim1 i {
+    font-size: 19px;
+    background-color: #742296;
+    padding: 7px 12px;
+    color: white;
+  }
+  .main .get .kim2 i {
+    font-size: 19px;
+    background-color: #742296;
+    padding: 7px 12px;
+    color: white;
   }
   .main .get .name {
     margin: -11px 0px 0 9px;
@@ -1570,6 +1641,12 @@ body {
     margin-right: 13px;
     width: 156px;
   }
+  .about .container .gun p {
+    padding-top: 12px;
+    padding-bottom: 10px;
+    margin: 0;
+    font-size: 12px;
+  }
   .about .container .rong {
     margin-left: 36px;
   }
@@ -1661,11 +1738,11 @@ body {
     flex-direction: column;
   }
   .services .now {
-    width: 72%;
-    height: 53vh;
+    width: 82%;
+    height: 54vh;
   }
   .services .now .good {
-    height: 53.8vh;
+    height: 54vh;
     width: 100%;
   }
   .services .now .good img {
@@ -1682,14 +1759,14 @@ body {
     margin: 20px 0;
     background-color: #742296;
     color: white;
-    width: 72%;
+    width: 82%;
     height: 53vh;
     padding: 20px 15px;
     position: relative;
   }
   .services .super .more {
-    height: 50.9vh;
-    width: 94.9%;
+    height: 50.43vh;
+    width: 95.9%;
     display: flex;
     align-items: end;
     justify-content: end;
@@ -1703,11 +1780,23 @@ body {
     opacity: 100%;
     margin-right: 3.2px;
   }
+  .services .super .more i {
+    position: absolute;
+    font-size: 17px;
+    background-color: #742296;
+    border-radius: 50%;
+    padding: 5px 7px;
+    color: white;
+    z-index: 1;
+    margin-right: 5px;
+    margin-bottom: 5px;
+  }
   .services .super h3 {
-    font-size: 14px;
+    font-size: 13px;
+    padding: 0;
   }
   .services .super li {
-    font-size: 10px;
+    font-size: 9px;
     padding: 0px;
   }
   .services .super h4 {
@@ -1720,8 +1809,8 @@ body {
     font-size: 12px;
   }
   .services .foni {
-    width: 72%;
-    height: 53vh;
+    width: 82%;
+    height: 54vh;
   }
   .services .bad {
     height: 53.89vh;
@@ -1883,6 +1972,12 @@ body {
   .about .container .gun {
     padding-left: 22px;
   }
+  .about .container .gun p {
+    padding-top: 12px;
+    padding-bottom: 9px;
+    margin: 0;
+    font-size: 12px;
+  }
   .main .get .kim1 {
     display: flex;
     justify-content: flex-end;
@@ -1915,6 +2010,15 @@ body {
     height: 3.8vh;
     margin-left: 20PX;
   }
+  .services .super {
+    margin: 20px 0;
+    background-color: #742296;
+    color: white;
+    width: 81%;
+    height: 53vh;
+    padding: 20px 15px;
+    position: relative;
+  }
   .services .super .more img {
     -o-object-fit: contain;
     object-fit: contain;
@@ -1930,6 +2034,61 @@ body {
     height: 5.8vh;
     opacity: 100%;
     margin-right: 1.2px;
+  }
+  .services .now {
+    width: 81%;
+    height: 54vh;
+  }
+  .services .now .good {
+    height: 54vh;
+    width: 100%;
+  }
+  .services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 14%;
+    height: 6.5vh;
+    opacity: 100%;
+    margin-right: 0.2px;
+  }
+  .services .super .more {
+    height: 50.9vh;
+    width: 94.9%;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    position: absolute;
+  }
+  .services .super .more i {
+    position: absolute;
+    font-size: 17px;
+    background-color: #742296;
+    border-radius: 50%;
+    padding: 5px 7px;
+    color: white;
+    z-index: 1;
+    margin-right: 5px;
+    margin-bottom: 7px;
+  }
+  .services .foni {
+    width: 81%;
+    height: 54vh;
+  }
+  .services .bad {
+    height: 54vh;
+    width: 100%;
+  }
+  .main .get .kim1 i {
+    font-size: 21px;
+    background-color: #742296;
+    padding: 7px 11px;
+    color: white;
+  }
+  .main .get .kim2 i {
+    font-size: 21px;
+    background-color: #742296;
+    padding: 7px 11px;
+    color: white;
   }
 }
 @media (min-width: 1366px) {
@@ -2139,5 +2298,36 @@ body {
     justify-content: center;
     padding: 30px;
     padding-bottom: 66px;
+  }
+  .services .super .more {
+    width: 358px;
+    height: 67.9vh;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    position: absolute;
+  }
+  .services .super .more img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 12.9%;
+    height: 5.6vh;
+    opacity: 100%;
+    margin-right: 5.2px;
+  }
+  .services .bad h5 {
+    font-size: 27px;
+    color: white;
+    font-family: "JosefinSans-Regular";
+    font-weight: bolder;
+    padding-right: 106px;
+    margin-bottom: 4px;
+  }
+  .instagram .demo img {
+    width: 10%;
+    height: 42vh;
+    padding: 5px;
+    -o-object-fit: cover;
+    object-fit: cover;
   }
 }/*# sourceMappingURL=style.css.map */
