--- a/style.scss
+++ b/style.scss
@@ -544,12 +544,21 @@ h2{
 
            
             
-         img{
-            object-fit: contain;
-            margin-left: 20px;
-            width: 13.6%;
-            height: 6.5vh;
+        //  img{
+        //     object-fit: contain;
+        //     margin-left: 20px;
+        //     width: 13.6%;
+        //     height: 6.5vh;
+        //  }
+
+        i{
+            font-size: 24px;
+            background-color: #742296;
+            padding: 7px 12px;
+            color: white;
+
          }
+
     
             h5{
                 font-size: 27px;
@@ -581,8 +590,8 @@ h2{
 
         .more{
 
-            width: 298px;
-            height: 75vh;
+            width: 297.7px;
+            height: 71.9vh;
             display: flex;
             align-items: end;
             justify-content:end ;
@@ -590,13 +599,29 @@ h2{
 
               
          img{
+            position: relative;
+            -o-object-fit: contain;
             object-fit: contain;
-            width: 12.9%;
-            height: 13.9vh;
-            opacity: 70%;
-            margin-right: 9.2px;
-         
+            width: 16.9%;
+            height: 6.9vh;
+            opacity: 100%;
+            margin-right: 3.2px;
          }
+
+
+        i{
+            position: absolute;
+            font-size: 17px;
+            background-color: #742296;
+            border-radius: 50%;
+            padding: 5px 7px;
+            color: white;
+            z-index: 1;
+            margin-right: 14px;
+            margin-bottom: 10px;
+         }
+
+      
     
 
 
@@ -685,12 +710,21 @@ h2{
         
     
          
-        img{
-            object-fit: contain;
-            margin-left: 20px;
-            width: 13.6%;
-            height: 6.5vh;
+        // img{
+        //     object-fit: contain;
+        //     margin-left: 20px;
+        //     width: 13.6%;
+        //     height: 6.5vh;
+        //  }
+
+        i{
+            font-size: 24px;
+            background-color: #742296;
+            padding: 7px 12px;
+            color: white;
+
          }
+
     
             h5{
                
@@ -750,12 +784,14 @@ h2{
             width: 392px;
             height: 55vh;
 
-            .late{
-                object-fit: contain;
-                width: 9.3%;
-                height: 6vh;
-                margin-left: 20PX;
-            }
+            i{
+                font-size: 24px;
+                background-color: #742296;
+                padding: 7px 12px;
+                color: white;
+
+             }
+
         }
 
         .kim1{
@@ -769,13 +805,18 @@ h2{
             width: 392px;
             height: 55vh;
 
-            .visa{
-                
-                object-fit: contain;
-                width: 9.3%;
-                height: 6vh;
-                margin-left: 20PX;
-            }
+            
+               
+
+                i{
+                    font-size: 24px;
+                    background-color: #742296;
+                    padding: 7px 12px;
+                    color: white;
+
+                 }
+
+           
         }
 
 
@@ -835,8 +876,8 @@ p{
 
 
         img{
-            width: 12%;
-            height: 47vh;
+            width: 10%;
+            height: 43vh;
             padding: 5px;
             object-fit: cover;
         }
@@ -1297,12 +1338,24 @@ h1{
               
          img{
             object-fit: contain;
-            width: 22%;
-            height: 2.34vh;
-            opacity: 70%;
-            margin-right:0px;
+            width: 61px;
+            height: 3vh;
+            opacity: 100%;
+            margin-right:4px;
          
          }
+
+         i {
+            position: absolute;
+            font-size: 17px;
+            background-color: #742296;
+            border-radius: 50%;
+            padding: 5px 7px;
+            color: white;
+            z-index: 1;
+            margin-right: 20px;
+            margin-bottom: 6px;
+        }
     
 
         }
@@ -1514,6 +1567,39 @@ h1{
     overflow: clip;
     height: 19.6vh;
     width: 353.2px;
+}
+
+.isdo .line5 {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+}
+
+.isdo .line4 {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+}
+
+.isdo .line3 {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+}
+
+.isdo .line {
+    background-color: #f1f1f1;
+    width: 115px;
+    border: 1px solid white;
+    margin-bottom: 15px;
+}
+
+.isdo img {
+    width: 50%;
+    padding-bottom: 21px;
 }
 
 }
@@ -1793,10 +1879,10 @@ p {
 
         .good{
 
-            height: 36vh;
-            width:100%;
-    
-           
+        
+                height: 34vh;
+                width: 100%;
+            
 
            
             
@@ -1809,8 +1895,8 @@ p {
     
             h5{
                 font-size: 18px;
-                padding-right: 17px;
-                margin-bottom: 24px;
+                padding-right: 26px;
+                margin-bottom: 7px;
             }
     
         }
@@ -1837,12 +1923,24 @@ p {
               
          img{
             object-fit: contain;
-            width: 13%;
-            height: 4.4vh;
-            opacity: 70%;
-            margin-right:3.2px;
+            width: 18%;
+            height: 5.1vh;
+            opacity: 100%;
+            margin-right:1px;
          
          }
+
+          i {
+            position: absolute;
+            font-size: 17px;
+            background-color: #742296;
+            border-radius: 50%;
+            padding: 5px 7px;
+            color: white;
+            z-index: 1;
+            margin-right: 6px;
+            margin-bottom: 12px;
+        }
     
 
         }
@@ -1850,11 +1948,12 @@ p {
 
       h3{
         font-size: 12px;
+        padding: 0;
         
       }
 
       li{
-        font-size: 11px;
+        font-size: 10px;
         padding: 0px;
         
 
@@ -1886,8 +1985,8 @@ p {
     }
 
     .bad{
-        height: 36vh;
-        width:100%;
+        height: 34vh;
+        width: 100%;
    
         
     
@@ -1903,7 +2002,7 @@ p {
                
                 font-size: 18px;
                 padding-right: 55px;
-                margin-bottom: 33px;
+                margin-bottom: 15px;
             
 
             }
@@ -1918,6 +2017,20 @@ p {
   
     width: 278px;
     height: 22vh;
+}
+
+.main .get .kim1 i {
+    font-size: 19px;
+    background-color: #742296;
+    padding: 7px 12px;
+    color: white;
+}
+
+.main .get .kim2 i {
+    font-size: 19px;
+    background-color: #742296;
+    padding: 7px 12px;
+    color: white;
 }
 
 .main .get .name {
@@ -2450,6 +2563,13 @@ h2{
         width: 156px;
 }
 
+.about .container .gun p {
+    padding-top: 12px;
+    padding-bottom: 10px;
+    margin: 0;
+    font-size: 12px;
+}
+
 .about .container .rong {
     margin-left: 36px;
 }
@@ -2590,14 +2710,15 @@ p{
 
 
     .now{
-  
-        width: 72%;
-        height: 53vh;
+            width: 82%;
+            height: 54vh;
+    
+    
 
        
         .good{
 
-            height: 53.8vh;
+            height: 54vh;
             width:100%;
             
             
@@ -2624,7 +2745,7 @@ p{
         margin: 20px 0;
         background-color: #742296;
         color: white;
-        width: 72%;
+        width: 82%;
         height: 53vh;
         padding: 20px 15px;
         position: relative;
@@ -2632,8 +2753,8 @@ p{
 
         .more{
 
-            height: 50.9vh;
-            width:94.9%;
+            height: 50.43vh;
+            width: 95.9%;
             display: flex;
             align-items: end;
             justify-content:end ;
@@ -2648,18 +2769,31 @@ p{
             margin-right:3.2px;
          
          }
+
+         i {
+            position: absolute;
+            font-size: 17px;
+            background-color: #742296;
+            border-radius: 50%;
+            padding: 5px 7px;
+            color: white;
+            z-index: 1;
+            margin-right: 5px;
+            margin-bottom: 5px;
+        }
     
 
         }
 
 
       h3{
-        font-size: 14px;
+        font-size: 13px;
+        padding: 0;
         
       }
 
       li{
-        font-size: 10px;
+        font-size: 9px;
         padding: 0px;
 
     
@@ -2685,8 +2819,8 @@ p{
 
 
     .foni{
-        width: 72%;
-        height: 53vh;
+            width: 82%;
+            height: 54vh;
 
 
     }
@@ -2928,6 +3062,14 @@ width: 50%;
         padding-left: 22px;
     }
 
+    .about .container .gun p {
+        padding-top: 12px;
+        padding-bottom: 9px;
+        margin: 0;
+        font-size: 12px;
+    }
+
+
     .main .get .kim1 {
         display: flex;
         justify-content: flex-end;
@@ -2964,6 +3106,16 @@ width: 50%;
         margin-left: 20PX;
     }
 
+    .services .super {
+        margin: 20px 0;
+        background-color: #742296;
+        color: white;
+        width: 81%;
+        height: 53vh;
+        padding: 20px 15px;
+        position: relative;
+    }
+
     .services .super .more img {
         -o-object-fit: contain;
         object-fit: contain;
@@ -2981,6 +3133,70 @@ width: 50%;
         opacity: 100%;
         margin-right: 1.2px;
     }
+
+    .services .now {
+        width: 81%;
+        height: 54vh;
+    }
+
+    .services .now .good {
+        height: 54vh;
+        width: 100%;
+    }
+
+    .services .super .more img {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 14%;
+        height: 6.5vh;
+        opacity: 100%;
+        margin-right: 0.2px;
+    }
+
+    .services .super .more {
+        height: 50.9vh;
+        width: 94.9%;
+        display: flex;
+        align-items: end;
+        justify-content: end;
+        position: absolute;
+    }
+    .services .super .more i {
+        position: absolute;
+        font-size: 17px;
+        background-color: #742296;
+        border-radius: 50%;
+        padding: 5px 7px;
+        color: white;
+        z-index: 1;
+        margin-right: 5px;
+        margin-bottom: 7px;
+    }
+
+    .services .foni {
+        width: 81%;
+        height: 54vh;
+    }
+
+    .services .bad {
+        height: 54vh;
+        width: 100%;
+    }
+
+    .main .get .kim1 i {
+        font-size: 21px;
+        background-color: #742296;
+        padding: 7px 11px;
+        color: white;
+    }
+
+    .main .get .kim2 i {
+        font-size: 21px;
+        background-color: #742296;
+        padding: 7px 11px;
+        color: white;
+    }
+
 
 }
 
@@ -3289,6 +3505,42 @@ width: 50%;
         justify-content: center;
         padding: 30px;
         padding-bottom: 66px;
+    }
+
+    .services .super .more {
+        width: 358px;
+        height: 67.9vh;
+        display: flex;
+        align-items: end;
+        justify-content: end;
+        position: absolute;
+    }
+
+    .services .super .more img {
+        -o-object-fit: contain;
+        object-fit: contain;
+        width: 12.9%;
+        height: 5.6vh;
+        opacity: 100%;
+        margin-right: 5.2px;
+    }
+
+
+    .services .bad h5 {
+        font-size: 27px;
+        color: white;
+        font-family: "JosefinSans-Regular";
+        font-weight: bolder;
+        padding-right: 106px;
+        margin-bottom: 4px;
+    }
+
+    .instagram .demo img {
+        width: 10%;
+        height: 42vh;
+        padding: 5px;
+        -o-object-fit: cover;
+        object-fit: cover;
     }
 }
 
