--- a/style.css
+++ b/style.css
@@ -649,6 +649,200 @@ body {
   padding-right: 18px;
 }
 
+@media only screen and (min-width: 1399.98px) {
+  .main-nav .nav-bar img {
+    padding-left: 85px;
+    width: 26%;
+  }
+  .banner img {
+    width: 194px;
+    height: 61vh;
+    -o-object-fit: cover;
+    object-fit: contain;
+    padding-right: 13px;
+  }
+  .banner .text h1 {
+    font-size: 46px;
+    font-family: "JosefinSans-Regular";
+    color: #000;
+    font-weight: 700;
+    margin-top: 72px;
+    line-height: 55px;
+  }
+  .about .container .gun {
+    margin-left: 40px;
+  }
+  .about .container .gun #video {
+    width: 520px;
+    height: 405px;
+  }
+  .about .container .gallery img {
+    height: 40vh;
+  }
+  .about .container p {
+    font-family: "JosefinSans-Regular";
+    font-size: 17px;
+    margin-bottom: 10px;
+    font-weight: 580;
+  }
+  .rong {
+    margin-left: 35px;
+  }
+  .about {
+    padding: 70px 65px;
+  }
+  .about .container .hi {
+    position: absolute;
+    height: 54vh;
+    width: 32%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+  .about .container .gun {
+    margin-left: 24px;
+  }
+  .services .now {
+    width: 363px;
+    height: 70vh;
+    position: relative;
+  }
+  .services .foni {
+    width: 363px;
+    height: 70vh;
+    position: relative;
+  }
+  .services .super {
+    width: 363px;
+    height: 70vh;
+    position: relative;
+  }
+  .services .bad {
+    height: 70vh;
+    width: 363px;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    position: absolute;
+  }
+  .services .now .good {
+    height: 70vh;
+    width: 363px;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    position: absolute;
+  }
+  .services .super h3 {
+    font-size: 28px;
+    font-family: "JosefinSans-Regular";
+    margin-left: 4px;
+  }
+  .services .super p {
+    font-size: 20px;
+    padding: 2px;
+  }
+  .services .bad img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    margin-left: 20px;
+    width: 13.6%;
+    height: 6.3vh;
+  }
+  .services .now .good img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    margin-left: 20px;
+    width: 13.6%;
+    height: 6.3vh;
+  }
+  .services .bad h5 {
+    font-size: 27px;
+    color: white;
+    font-family: "JosefinSans-Regular";
+    font-weight: bolder;
+    padding-right: 106px;
+    margin-bottom: 18px;
+  }
+  .services .now .good h5 {
+    font-size: 28px;
+    color: white;
+    font-family: "JosefinSans-Regular";
+    font-weight: bolder;
+    padding-right: 70px;
+    margin-bottom: 9px;
+  }
+  .main .get .kim1 {
+    width: 421px;
+    height: 45vh;
+  }
+  .main .get .kim2 {
+    width: 421px;
+    height: 45vh;
+  }
+  .main .get .kim2 .late {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 9.3%;
+    height: 4.8vh;
+    margin-left: 20PX;
+  }
+  .main .get .kim1 .visa {
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 9.3%;
+    height: 4.9vh;
+    margin-left: 20PX;
+  }
+  .instagram .demo img {
+    width: 12%;
+    height: 47vh;
+    padding: 5px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .instagram .demo {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    padding-bottom: 66px;
+  }
+  .services .super .more {
+    width: 358px;
+    height: 67.9vh;
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    position: absolute;
+  }
+  .services .bad h5 {
+    font-size: 27px;
+    color: white;
+    font-family: "JosefinSans-Regular";
+    font-weight: bolder;
+    padding-right: 106px;
+    margin-bottom: 4px;
+  }
+  .instagram .demo img {
+    width: 10%;
+    height: 42vh;
+    padding: 5px;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  .services .super .more i {
+    position: absolute;
+    font-size: 20px;
+    background-color: #EAECCC;
+    border-radius: 0%;
+    padding: 8px 13px;
+    color: purple;
+    z-index: 1;
+    margin-right: 11px;
+    margin-bottom: 3px;
+  }
+}
 @media only screen and (min-width: 992px) and (max-width: 1024px) {
   .main-nav {
     padding: 20px;
@@ -999,7 +1193,7 @@ body {
     padding-bottom: 21px;
   }
 }
-@media only screen and (min-width: 576px) and (max-width: 991px) {
+@media (min-width: 576px) and (max-width: 991px) {
   .main-nav {
     padding: 20px;
   }
@@ -1388,7 +1582,40 @@ body {
     margin-right: 1px;
   }
 }
-@media (max-width: 575.98px) {
+@media (min-width: 1366px) {
+  body {
+    overflow-x: hidden;
+  }
+  .main-nav .overlay {
+    display: none;
+  }
+  .main-nav span {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  body {
+    overflow-x: hidden;
+  }
+  .main-nav .overlay {
+    display: none;
+  }
+  .main-nav span {
+    display: none;
+  }
+}
+@media (min-width: 992px) and (max-width: 1024px) {
+  body {
+    overflow-x: hidden;
+  }
+  .main-nav .overlay {
+    display: none;
+  }
+  .main-nav span {
+    display: none;
+  }
+}
+@media only screen and (max-width: 575.98px) {
   .main-nav .nav-bar {
     margin-right: 119px;
   }
@@ -1404,8 +1631,8 @@ body {
     height: 7vh;
     width: 100%;
     -o-object-fit: contain;
-    object-fit: contain;
-    margin-left: -7px;
+       object-fit: contain;
+    margin-left: 17px;
   }
   .main-nav .nav-bar {
     margin-right: 118px;
@@ -1539,7 +1766,7 @@ body {
     font-weight: 100;
   }
   .banner .text h1 {
-    font-size: 32px;
+    font-size: 28px;
     margin-top: 0px;
     line-height: 32px;
   }
@@ -1948,7 +2175,7 @@ body {
     font-weight: bolder;
   }
 }
-@media only sreen and (min-width: 414px) and (max-width: 500px) {
+@media only sreen and (man-width: 415px) {
   .main-nav {
     padding: 20px 0px 0 0;
   }
@@ -2106,230 +2333,35 @@ body {
     margin-right: 0.2px;
   }
 }
-@media (min-width: 1366px) {
-  body {
-    overflow-x: hidden;
-  }
-  .main-nav .overlay {
-    display: none;
-  }
-  .main-nav span {
-    display: none;
-  }
+/* Extra Small Devices (Phones Portrait) */
+@media (max-width: 575.98px) {
+  /* CSS styles specific to extra small devices */
 }
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  body {
-    overflow-x: hidden;
-  }
-  .main-nav .overlay {
-    display: none;
-  }
-  .main-nav span {
-    display: none;
-  }
+/* Small Devices (Phones Landscape) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  /* CSS styles specific to small devices */
 }
-@media (min-width: 992px) and (max-width: 1024px) {
-  body {
-    overflow-x: hidden;
-  }
-  .main-nav .overlay {
-    display: none;
-  }
-  .main-nav span {
-    display: none;
-  }
+/* Medium Devices (Tablets) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  /* CSS styles specific to medium devices */
 }
-@media only screen and (min-width: 1399.98px) {
-  .main-nav .nav-bar img {
-    padding-left: 85px;
-    width: 26%;
-  }
-  .banner img {
-    width: 194px;
-    height: 61vh;
-    -o-object-fit: cover;
-    object-fit: contain;
-    padding-right: 13px;
-  }
-  .banner .text h1 {
-    font-size: 46px;
-    font-family: "JosefinSans-Regular";
-    color: #000;
-    font-weight: 700;
-    margin-top: 72px;
-    line-height: 55px;
-  }
-  .about .container .gun {
-    margin-left: 40px;
-  }
-  .about .container .gun #video {
-    width: 520px;
-    height: 405px;
-  }
-  .about .container .gallery img {
-    height: 40vh;
-  }
-  .about .container p {
-    font-family: "JosefinSans-Regular";
-    font-size: 17px;
-    margin-bottom: 10px;
-    font-weight: 580;
-  }
-  .rong {
-    margin-left: 35px;
-  }
-  .about {
-    padding: 70px 65px;
-  }
-  .about .container .hi {
-    position: absolute;
-    height: 54vh;
-    width: 32%;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-  }
-  .about .container .gun {
-    margin-left: 24px;
-  }
-  .services .now {
-    width: 363px;
-    height: 70vh;
-    position: relative;
-  }
-  .services .foni {
-    width: 363px;
-    height: 70vh;
-    position: relative;
-  }
-  .services .super {
-    width: 363px;
-    height: 70vh;
-    position: relative;
-  }
-  .services .bad {
-    height: 70vh;
-    width: 363px;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    position: absolute;
-  }
-  .services .now .good {
-    height: 70vh;
-    width: 363px;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    position: absolute;
-  }
-  .services .super h3 {
-    font-size: 28px;
-    font-family: "JosefinSans-Regular";
-    margin-left: 4px;
-  }
-  .services .super p {
-    font-size: 20px;
-    padding: 2px;
-  }
-  .services .bad img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    margin-left: 20px;
-    width: 13.6%;
-    height: 6.3vh;
-  }
-  .services .now .good img {
-    -o-object-fit: contain;
-    object-fit: contain;
-    margin-left: 20px;
-    width: 13.6%;
-    height: 6.3vh;
-  }
-  .services .bad h5 {
-    font-size: 27px;
-    color: white;
-    font-family: "JosefinSans-Regular";
-    font-weight: bolder;
-    padding-right: 106px;
-    margin-bottom: 18px;
-  }
-  .services .now .good h5 {
-    font-size: 28px;
-    color: white;
-    font-family: "JosefinSans-Regular";
-    font-weight: bolder;
-    padding-right: 70px;
-    margin-bottom: 9px;
-  }
-  .main .get .kim1 {
-    width: 421px;
-    height: 45vh;
-  }
-  .main .get .kim2 {
-    width: 421px;
-    height: 45vh;
-  }
-  .main .get .kim2 .late {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 9.3%;
-    height: 4.8vh;
-    margin-left: 20PX;
-  }
-  .main .get .kim1 .visa {
-    -o-object-fit: contain;
-    object-fit: contain;
-    width: 9.3%;
-    height: 4.9vh;
-    margin-left: 20PX;
-  }
-  .instagram .demo img {
-    width: 12%;
-    height: 47vh;
-    padding: 5px;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .instagram .demo {
-    display: flex;
-    justify-content: center;
-    padding: 30px;
-    padding-bottom: 66px;
-  }
-  .services .super .more {
-    width: 358px;
-    height: 67.9vh;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    position: absolute;
-  }
-  .services .bad h5 {
-    font-size: 27px;
-    color: white;
-    font-family: "JosefinSans-Regular";
-    font-weight: bolder;
-    padding-right: 106px;
-    margin-bottom: 4px;
-  }
-  .instagram .demo img {
-    width: 10%;
-    height: 42vh;
-    padding: 5px;
-    -o-object-fit: cover;
-    object-fit: cover;
-  }
-  .services .super .more i {
-    position: absolute;
-    font-size: 20px;
-    background-color: #EAECCC;
-    border-radius: 0%;
-    padding: 8px 13px;
-    color: purple;
-    z-index: 1;
-    margin-right: 11px;
-    margin-bottom: 3px;
-  }
+/* Large Devices (Desktops and Laptops) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  /* CSS styles specific to large devices */
+}
+/* Extra Large Devices (Large Desktops and TVs) */
+@media (min-width: 1200px) {
+  /* CSS styles specific to extra large devices */
+}
+/* Landscape Orientation */
+@media (orientation: landscape) {
+  /* CSS styles specific to landscape orientation */
+}
+/* Portrait Orientation */
+@media (orientation: portrait) {
+  /* CSS styles specific to portrait orientation */
+}
+/* Viewport Resizing */
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  /* CSS styles specific to viewport resizing */
 }/*# sourceMappingURL=style.css.map */
